Don't filter National Exchange Rates. (ODAEU-144)

--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master_bilateral_toa.jrxml
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master_bilateral_toa.jrxml
@@ -17,8 +17,8 @@ MEMBER [Type of Aid].[Debt Relief] AS SUM({[Type of Aid].[F],[Type of Aid].[F01]
 MEMBER [Type of Aid].[Administrative costs not included elsewhere] AS SUM({[Type of Aid].[G],[Type of Aid].[G01]})
 MEMBER [Type of Aid].[Other in-donor expenditures] AS SUM({[Type of Aid].[H],[Type of Aid].[H01],[Type of Aid].[H02]})
 MEMBER [Type of Aid].[AllTypes] AS SUM({[Type of Aid].[A], [Type of Aid].[B], [Type of Aid].[C], [Type of Aid].[D], [Type of Aid].[E], [Type of Aid].[F], [Type of Aid].[G], [Type of Aid].[H]})
-MEMBER [Measures].[First Year] AS SUM(CrossJoin({[Reporting Year].[$P{FIRST_YEAR}]}, {[Measures].[Net Amount Currency OECD]}))
-MEMBER [Measures].[Second Year] AS SUM(CrossJoin({[Reporting Year].[$P{SECOND_YEAR}]}, {[Measures].[Net Amount Currency OECD]}))
+MEMBER [Measures].[First Year] AS SUM(CrossJoin({[Reporting Year].[$P{FIRST_YEAR}]}, {[Measures].[Net Amount Currency NATLOECD]}))
+MEMBER [Measures].[Second Year] AS SUM(CrossJoin({[Reporting Year].[$P{SECOND_YEAR}]}, {[Measures].[Net Amount Currency NATLOECD]}))
 SELECT
 {[Type of Aid].[Budget Support], [Type of Aid].[Core contributions and pooled programmes and funds], [Type of Aid].[Project-type interventions], [Type of Aid].[Experts and other technical assistance], [Type of Aid].[Scholarships and student costs in donor countries], [Type of Aid].[Debt Relief], [Type of Aid].[Administrative costs not included elsewhere], [Type of Aid].[Other in-donor expenditures], [Type of Aid].[AllTypes] } ON ROWS,
 {[Measures].[First Year], [Measures].[Second Year]} ON COLUMNS
