--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master.jrxml
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master.jrxml
@@ -16,14 +16,14 @@ MEMBER [Reporting Year].[First Year] AS [Reporting Year].[$P{FIRST_YEAR}]
 MEMBER [Reporting Year].[Second Year] AS [Reporting Year].[$P{SECOND_YEAR}]
 SELECT
 {[Reporting Year].[First Year], [Reporting Year].[Second Year]} ON ROWS,
-{[Measures].[Net Amount Currency OECD], [Measures].[Exchange Rate]} ON COLUMNS
+{[Measures].[Net Amount Currency NATLOECD], [Measures].[Exchange Rate]} ON COLUMNS
 FROM [Financial]]]>
     </queryString>
     <field name="Extended Amount Year 1" class="java.lang.Number">
-        <fieldDescription><![CDATA[Data([Measures].[Net Amount Currency OECD], [Reporting Year].[First Year])]]></fieldDescription>
+        <fieldDescription><![CDATA[Data([Measures].[Net Amount Currency NATLOECD], [Reporting Year].[First Year])]]></fieldDescription>
     </field>
     <field name="Extended Amount Year 2" class="java.lang.Number">
-        <fieldDescription><![CDATA[Data([Measures].[Net Amount Currency OECD], [Reporting Year].[Second Year])]]></fieldDescription>
+        <fieldDescription><![CDATA[Data([Measures].[Net Amount Currency NATLOECD], [Reporting Year].[Second Year])]]></fieldDescription>
     </field>
     <field name="FIRST_YEAR_EXRATE" class="java.lang.Number">
         <fieldDescription><![CDATA[Data([Measures].[Exchange Rate], [Reporting Year].[First Year])]]></fieldDescription>
