Changed currency and add more precision for pie charts. (ODAEU-127)

--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/cdf/pages/reports/ReportsPage.properties.xml
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/cdf/pages/reports/ReportsPage.properties.xml
@@ -11,7 +11,7 @@
 <properties>
 	<entry key="page.title">ODA at a Glance</entry>
     <entry key="dashboards.netODA">Net ODA</entry>
-	<entry key="dashboards.topTenRecipients">Top Ten Recipients of Gross ODA (USD million)</entry>
+	<entry key="dashboards.topTenRecipients">Top Ten Recipients of Gross ODA (USD)</entry>
 	<entry key="dashboards.topTenMemoShare">Memo: Share of gross bilateral ODA</entry>
 	<entry key="dashboards.odaByRegionChart">By Region (USD m)</entry>
 	<entry key="dashboards.odaByIncomeGroupChart">By Income Group (USD m)</entry>
